--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Joseph Enoch",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "moment": "^2.22.2",
     "normalize.css": "^8.0.0",
